# uasat2

./: .gitmodules  CMakeLists.txt  LICENSE
apps/: CMakeLists.txt
apps/poset/: index.html  poset.js
apps/simdgen/: CMakeLists.txt  binop.hpp  simdgen.cpp
apps/testing/: CMakeLists.txt  plain.cpp  testing.cpp
apps/validate/: CMakeLists.txt  index.html  validate.cpp  validate.html
include/uasat/: bitvec.hpp  boolalg.hpp  clone.hpp  func.hpp  group.hpp  perm.hpp  set.hpp  shape.hpp  solver.hpp  tensor.hpp
src/: CMakeLists.txt  bitvec.cpp  boolalg.cpp  clone.cpp  func.cpp  group.cpp  perm.cpp  set.cpp  shape.cpp  solver.cpp  tensor.cpp  test.cpp  test.html
src/solvers/: CMakeLists.txt  minisat.cpp  minisat.hpp  solver.cpp
